infra/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-connect-api
  namespace: sandbox
  labels:
    app: files-connect-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: files-connect-api
  template:
    metadata:
      labels:
        app: files-connect-api
    spec:
      imagePullSecrets:
      - name: tgdex-registry-cred
      containers:
      - name: files-connect-api
        image: ghcr.io/datakaveri/tgdex-file-connect-api:latest
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /v1/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /v1/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 30
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: files-connect-api-service
  namespace: sandbox
spec:
  selector:
    app: files-connect-api
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
